[package]
name = "miden-node-proto"
version.workspace = true
description = "Miden node message definitions (Store, Block Producer and RPC)"
readme = "README.md"
keywords = ["miden", "node", "protobuf", "rpc"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
hex = { version = "0.4" }
miden-node-utils = { workspace = true }
miden-objects = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
proptest = { version = "1.5" }

[build-dependencies]
anyhow = { version = "1.0" }
prost = { workspace = true }
prost-build = { version = "0.13" }
protox = { version = "0.7" }
tonic-build = { version = "0.12" }
