[package]
authors.workspace      = true
description            = "Miden node message definitions (Store, Block Producer and RPC)"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "protobuf", "rpc"]
license.workspace      = true
name                   = "miden-node-proto"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
rpc-client = ["miden-node-proto-build/rpc-client"]

[dependencies]
hex              = { version = "0.4" }
miden-node-utils = { workspace = true }
miden-objects    = { workspace = true }
prost            = { workspace = true }
thiserror        = { workspace = true }
tonic            = { workspace = true }

[dev-dependencies]
proptest = { version = "1.5" }

[build-dependencies]
anyhow                 = { version = "1.0" }
miden-node-proto-build = { workspace = true }
tonic-build            = { version = "0.12" }
