[package]
authors.workspace      = true
description            = "Miden node protobuf bindings builder"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "protobuf", "rpc"]
license.workspace      = true
name                   = "miden-node-proto-build"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
internal = []

[dependencies]
anyhow      = { version = "1.0" }
prost       = { workspace = true }
prost-build = { version = "0.13" }
protox      = { version = "0.7" }
tonic-build = { version = "0.12" }
