[package]
name = "miden-rpc-proto"
version = "0.4.0"
description = "Miden node RPC message definitions"
readme = "README.md"
keywords = ["miden", "node", "protobuf", "rpc"]
categories = ["no-std::no-alloc"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
