[package]
authors.workspace      = true
categories             = ["no-std::no-alloc"]
description            = "Miden node RPC message definitions"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "protobuf", "rpc"]
license.workspace      = true
name                   = "miden-rpc-proto"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
default = ["std"]
std     = []
