[package]
name = "miden-node-rpc"
version.workspace = true
description = "Miden node's front-end RPC server"
readme = "README.md"
keywords = ["miden", "node", "rpc"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
directories = { version = "5.0" }
figment = { version = "0.10", features = ["toml", "env"] }
hex = { version = "0.4" }
miden-node-block-producer = { workspace = true }
miden-node-proto = { workspace = true }
miden-node-store = { workspace = true }
miden-node-utils = { workspace = true }
miden-objects = { workspace = true }
miden-tx = { workspace = true }
prost = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros"] }
tokio-stream = { workspace = true, features = ["net"] }
toml = { version = "0.8" }
tonic = { workspace = true }
tonic-web = { version = "0.12" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
miden-node-utils = { workspace = true, features = ["tracing-forest"] }
