[package]
name = "miden-node-rpc"
version.workspace = true
description = "Miden node's front-end RPC server"
readme = "README.md"
keywords = ["miden", "node", "rpc"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
miden-node-proto = { workspace = true }
miden-node-utils = { workspace = true }
miden-objects = { workspace = true }
miden-tx = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true }
tonic-web = { version = "0.12" }
tracing = { workspace = true }

[dev-dependencies]
miden-node-utils = { workspace = true, features = ["tracing-forest"] }
