[package]
authors.workspace      = true
description            = "Miden node's front-end RPC server"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "rpc"]
license.workspace      = true
name                   = "miden-node-rpc"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
miden-node-proto = { workspace = true }
miden-node-utils = { workspace = true }
miden-objects    = { workspace = true }
miden-tx         = { workspace = true }
tokio            = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tokio-stream     = { workspace = true, features = ["net"] }
tonic            = { workspace = true }
tonic-web        = { version = "0.12" }
tracing          = { workspace = true }

[dev-dependencies]
miden-node-utils = { workspace = true, features = ["tracing-forest"] }
