[package]
authors.workspace      = true
description            = "Miden node's state store component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "store"]
license.workspace      = true
name                   = "miden-node-store"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
deadpool-sqlite    = { version = "0.9.0", features = ["rt_tokio_1"] }
hex                = { version = "0.4" }
miden-lib          = { workspace = true }
miden-node-proto   = { workspace = true }
miden-node-utils   = { workspace = true }
miden-objects      = { workspace = true }
rusqlite           = { version = "0.32.1", features = ["array", "buildtime_bindgen", "bundled"] }
rusqlite_migration = { version = "1.3" }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread"] }
tokio-stream       = { workspace = true, features = ["net"] }
tonic              = { workspace = true }
tower-http         = { workspace = true, features = ["util"] }
tracing            = { workspace = true }

[dev-dependencies]
assert_matches   = { workspace = true }
miden-lib        = { workspace = true, features = ["testing"] }
miden-node-utils = { workspace = true, features = ["tracing-forest"] }
miden-objects    = { workspace = true, features = ["testing"] }
