[package]
name = "miden-node-utils"
version.workspace = true
description = "Miden node's shared utilities"
readme = "README.md"
keywords = ["miden", "node", "utils"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { version = "1.0" }
figment = { version = "0.10", features = ["toml", "env"] }
itertools = { version = "0.12" }
miden-objects = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-forest = { version = "0.1", optional = true, features = ["chrono"] }
tracing-subscriber = { workspace = true }

# Optional dependencies enabled by `vergen` feature.
# This must match the version expected by `vergen-gitcl`.
vergen = { "version" = "9.0", optional = true }
vergen-gitcl = { version = "1.0", features = ["cargo", "rustc"], optional = true }

[features]
# Enables depedencies intended for build script generation of version metadata.
vergen = ["dep:vergen", "dep:vergen-gitcl"] 
