[package]
authors.workspace      = true
description            = "Miden node's shared utilities"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "utils"]
license.workspace      = true
name                   = "miden-node-utils"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
# Enables depedencies intended for build script generation of version metadata.
vergen = ["dep:vergen", "dep:vergen-gitcl"]

[dependencies]
anyhow                = { version = "1.0" }
figment               = { version = "0.10", features = ["env", "toml"] }
itertools             = { workspace = true }
miden-objects         = { workspace = true }
opentelemetry         = "0.27.1"
opentelemetry-otlp    = { version = "0.27.0", features = ["tls-roots"] }
opentelemetry_sdk     = { version = "0.27.1", features = ["rt-tokio"] }
rand                  = { workspace = true }
serde                 = { version = "1.0", features = ["derive"] }
thiserror             = { workspace = true }
tonic                 = { workspace = true }
tracing               = { workspace = true }
tracing-forest        = { version = "0.1", optional = true, features = ["chrono"] }
tracing-opentelemetry = "0.28.0"
tracing-subscriber    = { workspace = true }
# Optional dependencies enabled by `vergen` feature.
# This must match the version expected by `vergen-gitcl`.
vergen       = { "version" = "9.0", optional = true }
vergen-gitcl = { version = "1.0", features = ["cargo", "rustc"], optional = true }
