[package]
name = "miden-node-genesis"
version = "0.1.0"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xpolygonmiden/miden-node"
keywords = ["miden", "node", "program"]
edition = "2021"
rust-version = "1.73"

[dependencies]
anyhow = { version = "1" }
miden_objects = { workspace = true, default-features = true, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
