[package]
name = "miden-node-genesis"
version = "0.1.0"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xpolygonmiden/miden-node"
keywords = ["miden", "node", "program"]
edition = "2021"
rust-version = "1.73"
description = "Generate a JSON file representing the chain state at genesis"

[dependencies]
anyhow = { version = "1" }
clap = { version = "4.4", features = ["derive"] }
miden-node-store = { path = "../../store" }
miden-crypto = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
